# rag-genai-dbs

./: .dockerignore  Dockerfile  README.md  colpali_vision_retrieval.ipynb  docker-compose.yml  local_rag_playground.ipynb  pyproject.toml  requirements.txt  single_pdf_colpali_qdrant.ipynb
app/: __init__.py  config.py  llm_answer.py  main.py  models_local.py  retrieval_text.py  retrieval_vision.py  utils.py
data/: video.txt
